WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
260622
VideoDecoder.configure should not throw on unsupported codecs
https://bugs.webkit.org/show_bug.cgi?id=260622
Summary
VideoDecoder.configure should not throw on unsupported codecs
youenn fablet
Reported
2023-08-23 11:54:08 PDT
VideoDecoder.configure should not throw on unsupported codecs
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-08-23 11:54:23 PDT
<
rdar://problem/114336853
>
youenn fablet
Comment 2
2023-08-23 12:03:13 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16984
EWS
Comment 3
2023-08-25 03:40:52 PDT
Committed
267272@main
(a7b3c2e07fde): <
https://commits.webkit.org/267272@main
> Reviewed commits have been landed. Closing PR #16984 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug